<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:paddingBottom="@dimen/history_row_bot_padding"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/bmiHistory"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_text_side_margin"
                android:layout_marginTop="@dimen/bmi_text_top_margin" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="@dimen/bmi_text_bottom_margin"
                app:layout_constraintBottom_toBottomOf="@+id/massHistoryEntry"
                android:textSize="24sp" android:text="@string/bmi" android:textAlignment="center"/>
        <TextView
                android:text="@string/height_cm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/heightHistoryEntry" android:layout_marginTop="@dimen/bmi_text_top_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/massHistoryEntry"/>
        <TextView
                android:text="@string/mass_kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/massHistoryEntry"
                app:layout_constraintTop_toBottomOf="@+id/heightHistoryEntry"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/bmi_text_top_margin"
                android:layout_marginBottom="@dimen/bmi_text_bottom_margin"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateHistoryEntry" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/massHistoryEntry"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline2" app:layout_constraintGuide_percent="0.4"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>