<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HistoryActivity">

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/bmi_recycler_margin_top"
            app:layout_constraintTop_toBottomOf="@+id/inputHistoryTitle"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bmiHistoryTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_text_side_margin"
            android:layout_marginTop="@dimen/bmi_text_top_margin" app:layout_constraintTop_toTopOf="parent"
            android:text="@string/bmi"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/bmi_text_bottom_margin"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
    />
    <TextView
            android:text="@string/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/inputHistoryTitle" app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold" android:layout_marginTop="@dimen/bmi_text_top_margin"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginEnd="@dimen/bmi_text_side_margin"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/dateHistoryTitle"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="@dimen/bmi_text_top_margin"
            android:text="@string/date"
            android:textStyle="bold" android:layout_marginBottom="@dimen/bmi_text_bottom_margin"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.4"/>
</androidx.constraintlayout.widget.ConstraintLayout>