<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/categoryText"
                    app:layout_constraintEnd_toEndOf="@+id/BMItext"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/calculateBMI"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/bmi_text_bottom_margin"
                    android:layout_marginTop="@dimen/bmi_text_top_margin"
                    app:layout_constraintTop_toBottomOf="@+id/BMItext" app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/BMItext" android:textColor="@color/colorPrimary"/>
            <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/BMItext"
                    app:layout_constraintTop_toBottomOf="@+id/heightText"
                    android:textSize="30sp" android:textAlignment="center"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/bmi_text_top_margin"
                    android:layout_marginEnd="@dimen/bmi_text_side_margin"
                    android:layout_marginStart="@dimen/bmi_text_side_margin"
                    android:textColor="@android:color/black" app:layout_constraintEnd_toEndOf="parent"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/massText" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/bmi_text_side_margin" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/bmi_text_side_margin"
                    app:layout_constraintTop_toBottomOf="@+id/massPrompt" app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="@dimen/bmi_text_top_margin"/>
            <ImageButton
                    android:layout_width="@dimen/info_button_size"
                    android:layout_height="@dimen/info_button_size" app:srcCompat="@drawable/button_next"
                    android:id="@+id/infoButton"
                    android:scaleType="centerInside"
                    app:layout_constraintTop_toTopOf="@+id/BMItext"
                    app:layout_constraintBottom_toBottomOf="@+id/BMItext"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/categoryText"
                    android:layout_marginStart="@dimen/bmi_button_side_margin" android:visibility="invisible"
                    android:background="@null" android:tint="@color/colorPrimary"/>
            <Button
                    android:text="@string/calculate"
                    android:layout_width="0dp"
                    android:id="@+id/calculateBMI" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/bmi_button_side_margin"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_button_side_margin"
                    app:layout_constraintHorizontal_bias="0.498" android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bmi_bottom_button_bot_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/colorPrimary"
                    android:backgroundTintMode="screen"/>
            <TextView
                    android:text="@string/height_cm"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/heightPrompt" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/bmi_text_side_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/bmi_text_side_margin"
                    android:layout_marginTop="@dimen/bmi_text_top_margin"
                    app:layout_constraintTop_toBottomOf="@+id/massText"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" app:srcCompat="@drawable/maklowicz"
                    android:id="@+id/topImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    android:scaleType="fitCenter"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/mass_kg"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/massPrompt" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/bmi_text_side_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/bmi_text_side_margin"
                    android:layout_marginTop="@dimen/bmi_text_top_margin"
                    app:layout_constraintTop_toBottomOf="@+id/topImage"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/guideline"
                                                        android:orientation="horizontal"
                                                        app:layout_constraintGuide_percent="0.3"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/heightText" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/bmi_text_side_margin" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/bmi_text_side_margin"
                    app:layout_constraintTop_toBottomOf="@+id/heightPrompt" app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="@dimen/bmi_text_top_margin"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>